<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#99000000"
    android:orientation="vertical"
    android:padding="@dimen/about_text_size" >

    <ImageView
        android:id="@id/about_image_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/webericon"
        android:src="@drawable/wallet" />

    <TextView
        android:id="@id/text_of_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_about"
        android:textColor="@color/image_text_color"
        android:textSize="@dimen/about_text_size" />

    <TextView
        android:id="@id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/link1" />

</LinearLayout>