<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_for_location_listview"
    android:orientation="vertical" >

    <EditText
        android:id="@id/edittext_title"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textMultiLine"
        android:layout_marginTop="5dp"
        android:background="@drawable/intrests"
        android:hint="@string/hint"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@id/edittext_msg"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:background="@drawable/intrests"
        android:gravity="start"
        android:hint="@string/hint2"
        android:inputType="textMultiLine"
        android:padding="15dp" />

    <Button
        android:id="@id/feedbackbut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="150dp"
        android:clickable="true"
        android:background="@drawable/ll1"
        android:text="@string/Feed" />

</LinearLayout>